--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
                     <div class="value">0</div>
                 </div>
             </div>
-            <div class="input">
-                
-            </div>
+            <div class="input"></div>
         </div>
     </div>
-    <script src="/scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
-<!--  -->
 </html>
