--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </div>
-    <script src="/scripts/main.js"></script>
+    <script src="./scripts/main-1.js"></script>
 </body>
 <!--  -->
 </html>
